# 4Corners

./: .gitignore  4CORNERSCLI-REFERENCE.md  BUILD.md  CLI-README.md  CLI-REFERENCE.md  Cargo.toml  GUI-REQUIREMENTS.md  PROJECT_STATUS.md  QUICK-FIX.md  README.md  TROUBLESHOOTING.md  build-cli.ps1  go.mod  go.sum  main.go
benchmark/: device_linux.go  device_windows.go  engine.go  report.go
cmd/4cornerscli/: main.go
device/: device.go  device_linux.go  device_windows.go
gui/: filedialog_windows.go  graph.go  mainwindow.go  webview.go
src/: cli.rs  main.rs  report.rs
src/engine/: mod.rs  platform_linux.rs  platform_windows.rs  worker.rs
